--- a/bespoke-interior-solutions-bangalore.html
+++ b/bespoke-interior-solutions-bangalore.html
@@ -9539,19 +9539,19 @@
                                 <a href="/">Home</a>
                             </li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31">
-                                <a href="./About.html">About</a>
+                                <a href="./leading_interior_design_company.html">About</a>
                             </li>
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30">
-                                <a href="./services.html">Services</a>
-                                <a href="./blogs.html">Blogs</a>
+                                <a href="./residential_and_commercial_interior_designers.html">Services</a>
+                                <a href="./best_design_consultants.html">Blogs</a>
                             </li>
 
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-28">
-                                <a href="./projects.html">Projects</a>
+                                <a href="./customized_interior_design_and_furniture_projects.html">Projects</a>
                             </li>
 
                             <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25">
-                                <a href="./contact.html">Contact</a>
+                                <a href="./contact_us_for_best_interior_designers.html">Contact</a>
                             </li>
                         </ul>
                     </nav>
@@ -9574,17 +9574,17 @@
         <!-- desktop navbar -->
         <ul class="fixed flex item-center gap-10 desktoNav right-16 z-999999" style="z-index: 99999999999;">
             <li><a class="text-lg uppercase" href="./index.html">Home</a></li>
-            <li><a class="text-lg uppercase" href="./About.html">About</a></li>
+            <li><a class="text-lg uppercase" href="./leading_interior_design_company.html">About</a></li>
             <li>
-                <a class="text-lg uppercase" href="./services.html">Services</a>
+                <a class="text-lg uppercase" href="./residential_and_commercial_interior_designers.html">Services</a>
             </li>
             <li>
-                <a class="text-[#cd5225] font-bold text-lg uppercase" href="./blogs.html">Blogs</a>
+                <a class="text-[#cd5225] font-bold text-lg uppercase" href="./best_design_consultants.html">Blogs</a>
             </li>
             <li>
-                <a class="text-lg uppercase" href="./projects.html">Projects</a>
+                <a class="text-lg uppercase" href="./customized_interior_design_and_furniture_projects.html">Projects</a>
             </li>
-            <li><a class="text-lg uppercase" href="./contact.html">Contact</a></li>
+            <li><a class="text-lg uppercase" href="./contact_us_for_best_interior_designers.html">Contact</a></li>
         </ul>
         <style>
             @media (max-width: 941px) {
@@ -10393,17 +10393,17 @@
                               width: 100%;
                             ">
                                                 <a style="color: #be5933 !important;" href="/">HOME</a>
-                                                <a style="color: #be5933 !important;" href="About.html">ABOUT</a>
+                                                <a style="color: #be5933 !important;" href="leading_interior_design_company.html">ABOUT</a>
                                                 <a style="color: #be5933 !important;"
-                                                    href="./services.html">SERVICES</a>
+                                                    href="./residential_and_commercial_interior_designers.html">SERVICES</a>
 
                                                 <a style="color: #be5933 !important; text-transform: uppercase !important;"
-                                                    href="./blogs.html">Blogs</a>
+                                                    href="./best_design_consultants.html">Blogs</a>
                                                 <a style="color: #be5933 !important;"
-                                                    href="./projects.html">PROJECTS</a>
+                                                    href="./customized_interior_design_and_furniture_projects.html">PROJECTS</a>
 
 
-                                                <a style="color: #be5933 !important;" href="./contact.html">CONTACT</a>
+                                                <a style="color: #be5933 !important;" href="./contact_us_for_best_interior_designers.html">CONTACT</a>
                                             </p>
                                         </div>
                                     </div>
@@ -10547,9 +10547,9 @@
                                             <p>
                                                 <a href="/">HOME</a>
                                                 <br />
-                                                <a href="./services.html">SERVICES</a>
+                                                <a href="./residential_and_commercial_interior_designers.html">SERVICES</a>
                                                 <br />
-                                                <a href="projects.html">PROJECTS</a>
+                                                <a href="customized_interior_design_and_furniture_projects.html">PROJECTS</a>
                                             </p>
                                         </div>
                                     </div>
@@ -10557,11 +10557,11 @@
                                         class="et_pb_module et_pb_text et_pb_text_3_tb_footer et_pb_text_align_left et_pb_bg_layout_light">
                                         <div class="et_pb_text_inner">
                                             <p>
-                                                <a href="./About.html">ABOUT</a>
+                                                <a href="./leading_interior_design_company.html">ABOUT</a>
                                                 <br>
-                                                <a href="./blogs.html">Blogs</a>
+                                                <a href="./best_design_consultants.html">Blogs</a>
                                                 <br>
-                                                <a href="./contact.html">CONTACT</a>
+                                                <a href="./contact_us_for_best_interior_designers.html">CONTACT</a>
                                             </p>
                                         </div>
                                     </div>
