--- a/index.html
+++ b/index.html
@@ -10020,22 +10020,22 @@
                 <a href="/">Home</a>
               </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31">
-                <a href="./About.html">About</a>
+                <a href="./leading_interior_design_company.html">About</a>
               </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30">
-                <a href="./services.html">Services</a>
+                <a href="./residential_and_commercial_interior_designers.html">Services</a>
               </li>
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30">
-                <a href="./blogs.html">Blogs</a>
+                <a href="./best_design_consultants.html">Blogs</a>
               </li>
 
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-28">
-                <a href="./projects.html">Projects</a>
+                <a href="./customized_interior_design_and_furniture_projects.html">Projects</a>
               </li>
 
 
               <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25">
-                <a href="./contact.html">Contact</a>
+                <a href="./contact_us_for_best_interior_designers.html">Contact</a>
               </li>
             </ul>
           </nav>
@@ -10058,11 +10058,11 @@
     <!-- desktop navbar -->
     <ul class="fixed flex item-center gap-10 desktoNav right-16 z-999999" style="z-index: 99999;">
       <li> <a class="text-[#cd5225] font-bold text-lg uppercase" href="./index.html">Home</a></li>
-      <li> <a class="text-lg uppercase" href="./About.html">About</a></li>
-      <li> <a class="text-lg uppercase" href="./services.html">Services</a></li>
-      <li> <a class="text-lg uppercase" href="./blogs.html">Blogs</a></li>
-      <li> <a class="text-lg uppercase" href="./projects.html">Projects</a></li>
-      <li> <a class="text-lg uppercase" href="./contact.html">Contact</a></li>
+      <li> <a class="text-lg uppercase" href="./leading_interior_design_company.html">About</a></li>
+      <li> <a class="text-lg uppercase" href="./residential_and_commercial_interior_designers.html">Services</a></li>
+      <li> <a class="text-lg uppercase" href="./best_design_consultants.html">Blogs</a></li>
+      <li> <a class="text-lg uppercase" href="./customized_interior_design_and_furniture_projects.html">Projects</a></li>
+      <li> <a class="text-lg uppercase" href="./contact_us_for_best_interior_designers.html">Contact</a></li>
     </ul>
     <style>
       @media (max-width:941px) {
@@ -10544,25 +10544,25 @@
                           to detail.
                         </p>
                         <!-- <button class="btn button border text-white bg-[#cd5225] hover:bg-white hover:text-[#cd5225] hover:border-[#cd5225] mt-2 transition-all duration-300 ease-in-out">
-                          <a href="./About.html" style="text-decoration: none; color: inherit; font-weight: bold;">Learn More</a>
+                          <a href="./leading_interior_design_company.html" style="text-decoration: none; color: inherit; font-weight: bold;">Learn More</a>
                       </button> -->
 
-                        <!-- <a href="./projects.html">
+                        <!-- <a href="./customized_interior_design_and_furniture_projects.html">
                           <div class="et_pb_module et_pb_toggle et_pb_toggle_0 et_pb_toggle_item et_pb_toggle_close">
                             <h5 class="et_pb_toggle_title">DISCOVER OUR PROJECTS</h5>
                           </div>
                         </a>
-                        <a href="./About.html">
+                        <a href="./leading_interior_design_company.html">
                           <div class="et_pb_module et_pb_toggle et_pb_toggle_0 et_pb_toggle_item et_pb_toggle_close">
                             <h5 class="et_pb_toggle_title">ABOUT En-Decor</h5>
                           </div>
                         </a>
-                        <a href="./services.html">
+                        <a href="./residential_and_commercial_interior_designers.html">
                           <div class="et_pb_module et_pb_toggle et_pb_toggle_0 et_pb_toggle_item et_pb_toggle_close">
                             <h5 class="et_pb_toggle_title">OUR SERVICES</h5>
                           </div>
                         </a>
-                        <a href="./contact.html">
+                        <a href="./contact_us_for_best_interior_designers.html">
                           <div class="et_pb_module et_pb_toggle et_pb_toggle_0 et_pb_toggle_item et_pb_toggle_close">
                             <h5 class="et_pb_toggle_title">Share Your Vision With Us</h5>
                           </div>
@@ -10578,7 +10578,7 @@
                             </p>
                             <p>&nbsp;</p>
                             <p>
-                              <a href="./projects.html">DISCOVER OUR PROJECTS<span class="et-pb-icon"
+                              <a href="./customized_interior_design_and_furniture_projects.html">DISCOVER OUR PROJECTS<span class="et-pb-icon"
                                   style="font-size: 10px; line-height: 0;">&#x35;</span></a>
                             </p>
                           </div>
@@ -10596,7 +10596,7 @@
                             </p> 
                              <p>&nbsp;</p>
                             <p>
-                              <a href="./About.html">Discover EN-DECOR<span class="et-pb-icon"
+                              <a href="./leading_interior_design_company.html">Discover EN-DECOR<span class="et-pb-icon"
                                   style="font-size: 10px; line-height: 0;">5</span></a>
                             </p> 
                           </div>
@@ -10615,7 +10615,7 @@
                             <p>
                               
 
-                              <a href="./services.html">DISCOVER OUR SERVICES
+                              <a href="./residential_and_commercial_interior_designers.html">DISCOVER OUR SERVICES
                                 <span class="et-pb-icon" style="font-size: 10px; line-height: 0;">&#x35;</span></a>
                             </p>
                           </div>
@@ -10630,7 +10630,7 @@
                             </p>
                             <p>&nbsp;</p>
                             <p>
-                              <a href="./contact.html">CONTACT EN-DECOR
+                              <a href="./contact_us_for_best_interior_designers.html">CONTACT EN-DECOR
                                 <span class="et-pb-icon" style="font-size: 10px; line-height: 0;">&#x35;</span></a>
                             </p>
                           </div>
@@ -10700,7 +10700,7 @@
                         <div
                           class="et_pb_button_module_wrapper et_pb_button_0_wrapper et_pb_button_alignment_left et_pb_module">
                           <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_light mr-5"
-                            href="./contact.html" target="_blank"
+                            href="./contact_us_for_best_interior_designers.html" target="_blank"
                             rel="noopener noreferrer">contact us</a>
                           <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
                             href="https://maps.app.goo.gl/nFie5xB1hN4PRUyj6" target="_blank"
@@ -11422,7 +11422,7 @@ That's You...
                         </div>
 
                         <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_light mr-5 text-center flex  item-center justify-center w-fit m"
-                          href="./contact.html" target="_blank" rel="noopener noreferrer"
+                          href="./contact_us_for_best_interior_designers.html" target="_blank" rel="noopener noreferrer"
                           style="margin: auto !important;">contact us</a>
                         <!-- <div class="et_pb_module et_pb_divider et_pb_divider_4 et_pb_divider_position_ et_pb_space">
                           <div class="et_pb_divider_internal">
@@ -11453,7 +11453,7 @@ That's You...
                         </div>
 
                         <a class="et_pb_button et_pb_button_0 et_pb_bg_layout_light mr-5 text-center flex  item-center justify-center w-fit m"
-                          href="./contact.html" target="_blank" rel="noopener noreferrer"
+                          href="./contact_us_for_best_interior_designers.html" target="_blank" rel="noopener noreferrer"
                           style="margin: auto !important;">contact us</a>
 
                         <!-- <div class="et_pb_module et_pb_divider et_pb_divider_5 et_pb_divider_position_ et_pb_space">
@@ -11505,14 +11505,14 @@ That's You...
                             width: 100%;
                           ">
                                           <a style="color: #be5933 !important;" href="/">HOME</a>
-                                          <a style="color: #be5933 !important;" href="About.html">ABOUT</a>
-                                          <a style="color: #be5933 !important;" href="./services.html">SERVICES</a>
+                                          <a style="color: #be5933 !important;" href="leading_interior_design_company.html">ABOUT</a>
+                                          <a style="color: #be5933 !important;" href="./residential_and_commercial_interior_designers.html">SERVICES</a>
 
-                                          <a style="color: #be5933 !important;" href="./blogs.html">Blogs</a>
-                                          <a style="color: #be5933 !important;" href="./projects.html">PROJECTS</a>
+                                          <a style="color: #be5933 !important;" href="./best_design_consultants.html">Blogs</a>
+                                          <a style="color: #be5933 !important;" href="./customized_interior_design_and_furniture_projects.html">PROJECTS</a>
 
 
-                                          <a style="color: #be5933 !important;" href="./contact.html">CONTACT</a>
+                                          <a style="color: #be5933 !important;" href="./contact_us_for_best_interior_designers.html">CONTACT</a>
                                         </p>
                                       </div>
                                     </div>
@@ -11654,9 +11654,9 @@ That's You...
                                         <p>
                                           <a href="/">HOME</a>
                                           <br />
-                                          <a href="./services.html">SERVICES</a>
+                                          <a href="./residential_and_commercial_interior_designers.html">SERVICES</a>
                                           <br />
-                                          <a href="projects.html">PROJECTS</a>
+                                          <a href="customized_interior_design_and_furniture_projects.html">PROJECTS</a>
                                         </p>
                                       </div>
                                     </div>
@@ -11664,11 +11664,11 @@ That's You...
                                       class="et_pb_module et_pb_text et_pb_text_3_tb_footer et_pb_text_align_left et_pb_bg_layout_light">
                                       <div class="et_pb_text_inner">
                                         <p>
-                                          <a href="./About.html">ABOUT</a>
+                                          <a href="./leading_interior_design_company.html">ABOUT</a>
                                           <br>
-                                          <a href="./blogs.html">Blogs</a>
+                                          <a href="./best_design_consultants.html">Blogs</a>
                                           <br>
-                                          <a href="./contact.html">CONTACT</a>
+                                          <a href="./contact_us_for_best_interior_designers.html">CONTACT</a>
                                         </p>
                                       </div>
                                     </div>
