--- a/main.html
+++ b/main.html
@@ -9914,12 +9914,12 @@
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-31"
                 >
-                  <a href="./About.html">About</a>
+                  <a href="./leading_interior_design_company.html">About</a>
                 </li>
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30"
                 >
-                  <a href="./services.html">Services</a>
+                  <a href="./residential_and_commercial_interior_designers.html">Services</a>
                 </li>
                 <!-- <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-29"
@@ -9931,7 +9931,7 @@
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-28"
                 >
-                  <a href="./projects.html">Projects</a>
+                  <a href="./customized_interior_design_and_furniture_projects.html">Projects</a>
                 </li>
                 <!-- <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-26"
@@ -9946,7 +9946,7 @@
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25"
                 >
-                  <a href="./contact.html">Contact</a>
+                  <a href="./contact_us_for_best_interior_designers.html">Contact</a>
                 </li>
               </ul>
             </nav>
@@ -10452,7 +10452,7 @@
                                 </p>
                                 <p>&nbsp;</p>
                                 <p>
-                                  <a href="./projects.html"
+                                  <a href="./customized_interior_design_and_furniture_projects.html"
                                     >DISCOVER OUR PROJECTS<span
                                       class="et-pb-icon"
                                       style="font-size: 10px; line-height: 0;"
@@ -10524,7 +10524,7 @@
                                 </p>
                                 <p>&nbsp;</p>
                                 <p>
-                                  <a href="./contact.html"
+                                  <a href="./contact_us_for_best_interior_designers.html"
                                     >CONTACT EN-DECOR
                                     <span
                                       class="et-pb-icon"
@@ -10703,7 +10703,7 @@
                             >
                               <a
                                 class="et_pb_button et_pb_button_0 et_pb_bg_layout_light"
-                                href="./contact.html"
+                                href="./contact_us_for_best_interior_designers.html"
                                 >Visit Us</a
                               >
                             </div>
@@ -10908,7 +10908,7 @@
                             >
                             <a
                               style="color: #be5933 !important;"
-                              href="About.html"
+                              href="leading_interior_design_company.html"
                               >ABOUT</a
                             >
                             <a style="color: #be5933 !important;" href="https://www.bmaarchitects.com/process/"
@@ -10919,7 +10919,7 @@
                             > -->
                             <a
                               style="color: #be5933 !important;"
-                              href="./projects.html"
+                              href="./customized_interior_design_and_furniture_projects.html"
                               >PROJECTS</a
                             >
                             <!-- <a href="https://www.bmaarchitects.com/careers/"
@@ -10930,7 +10930,7 @@
                             > -->
                             <a
                               style="color: #be5933 !important;"
-                              href="./contact.html"
+                              href="./contact_us_for_best_interior_designers.html"
                               >CONTACT</a
                             >
                           </p>
@@ -11168,7 +11168,7 @@
                       >
                         <div class="et_pb_text_inner">
                           <p>
-                            <a href="./About.html">ABOUT</a>
+                            <a href="./leading_interior_design_company.html">ABOUT</a>
                             <br />
                             <a href="https://www.bmaarchitects.com/process/"
                               >SERVICES</a
@@ -11187,9 +11187,9 @@
                           <p>
                             <a href="/">HOME</a>
                             <br />
-                            <a href="./services.html">SERVICES</a>
+                            <a href="./residential_and_commercial_interior_designers.html">SERVICES</a>
                             <br />
-                            <a href="./contact.html">CONTACT</a>
+                            <a href="./contact_us_for_best_interior_designers.html">CONTACT</a>
                           </p>
                         </div>
                       </div>
