--- a/thankyou.html
+++ b/thankyou.html
@@ -9770,12 +9770,12 @@
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page current-menu-item page_item page-item-17 current_page_item menu-item-31"
                 >
-                  <a href="./About.html" aria-current="page">About</a>
+                  <a href="./leading_interior_design_company.html" aria-current="page">About</a>
                 </li>
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-30"
                 >
-                  <a href="./services.html">Services</a>
+                  <a href="./residential_and_commercial_interior_designers.html">Services</a>
                 </li>
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-29"
@@ -9786,7 +9786,7 @@
                 <li
                   class="menu-item menu-item-type-post_type menu-item-object-page menu-item-25"
                 >
-                  <a href="./contact.html">Contact</a>
+                  <a href="./contact_us_for_best_interior_designers.html">Contact</a>
                 </li>
               </ul>
             </nav>
@@ -10002,12 +10002,12 @@
                           >
                           <a
                             style="color: #be5933 !important;"
-                            href="About.html"
+                            href="leading_interior_design_company.html"
                             >ABOUT</a
                           >
                           <!-- <a
                             style="color: #be5933 !important;"
-                            href="./services.html"
+                            href="./residential_and_commercial_interior_designers.html"
                             >SERVICES</a
                           > -->
                           <!-- <a href="https://www.bmaarchitects.com/leadership/"
@@ -10015,7 +10015,7 @@
                           > -->
                           <a
                             style="color: #be5933 !important;"
-                            href="./projects.html"
+                            href="./customized_interior_design_and_furniture_projects.html"
                             >PROJECTS</a
                           >
                           <!-- <a href="https://www.bmaarchitects.com/careers/"
@@ -10026,7 +10026,7 @@
                           > -->
                           <a
                             style="color: #be5933 !important;"
-                            href="./contact.html"
+                            href="./contact_us_for_best_interior_designers.html"
                             >CONTACT</a
                           >
                         </p>
@@ -10264,9 +10264,9 @@
                     >
                       <div class="et_pb_text_inner">
                         <p>
-                          <a href="./About.html">ABOUT</a>
+                          <a href="./leading_interior_design_company.html">ABOUT</a>
                           <br />
-                          <a href="./services.html">SERVICES</a>
+                          <a href="./residential_and_commercial_interior_designers.html">SERVICES</a>
                           <br />
                           <a href="./process.html">PROJECTS</a>
                         </p>
@@ -10279,9 +10279,9 @@
                         <p>
                           <a href="/">HOME</a>
                           <!-- <br />
-                          <a href="./services.html">SERVICES</a> -->
+                          <a href="./residential_and_commercial_interior_designers.html">SERVICES</a> -->
                           <br />
-                          <a href="./contact.html">CONTACT</a>
+                          <a href="./contact_us_for_best_interior_designers.html">CONTACT</a>
                         </p>
                       </div>
                     </div>
