--- a/contact_us_for_best_interior_designers.html
+++ b/contact_us_for_best_interior_designers.html
@@ -298,7 +298,8 @@
   <meta name='robots' content='index, follow, max-image-preview:large, max-snippet:-1, max-video-preview:-1' />
   <script type="text/javascript">
     let jqueryParams = [], jQuery = function (r) { return jqueryParams = [...jqueryParams, r], jQuery }, $ = function (r) { return jqueryParams = [...jqueryParams, r], $ }; window.jQuery = jQuery, window.$ = jQuery; let customHeadScripts = !1; jQuery.fn = jQuery.prototype = {}, $.fn = jQuery.prototype = {}, jQuery.noConflict = function (r) { if (window.jQuery) return jQuery = window.jQuery, $ = window.jQuery, customHeadScripts = !0, jQuery.noConflict }, jQuery.ready = function (r) { jqueryParams = [...jqueryParams, r] }, $.ready = function (r) { jqueryParams = [...jqueryParams, r] }, jQuery.load = function (r) { jqueryParams = [...jqueryParams, r] }, $.load = function (r) { jqueryParams = [...jqueryParams, r] }, jQuery.fn.ready = function (r) { jqueryParams = [...jqueryParams, r] }, $.fn.ready = function (r) { jqueryParams = [...jqueryParams, r] };</script>
-  <title>Contact - En-decor</title>
+  <title>Get In Touch With Best Interior Designers in Bangalore</title>
+<meta name="description" content="Contact En-decors for all your interior design needs in Bangalore. Reach out to us for consultations, queries, and appointments. Our team awaits your call!">
 
   <link rel="canonical" href="./contact_us_for_best_interior_designers.html" />
   <meta property="og:locale" content="en_US" />
