--- a/index.html
+++ b/index.html
@@ -355,23 +355,12 @@
         jqueryParams = [...jqueryParams, r];
       });
   </script>
-  <title>Home En-Decor</title>
-  <meta name="description" content="Elevate Your Spaces with En-decor: Where Dreams Take Shape." />
-  <meta name="En-decors | Leading Interior Design Company in Bangalore"
-    content="En-decors is a premier interior design company in Bangalore specializing in residential and commercial interiors, creating beautiful and functional spaces" />
-  <meta name="Interior Design Experts in Bangalore |  En-decors"
-    content="En-decors - Bangalore's top interior design company. Our team of expert designers creates stylish and functional interiors for homes and offices" />
-  <meta name="Best Services In Interior Designing | Solutions by En-decors"
-    content="Explore a wide range of interior design services in Bangalore. We offer custom solutions for homes, offices, hospitality, retails, and educational spaces." />
-  <meta name="En-decors Projects | Inspiring Interior Design Portfolio "
-    content="Check out our portfolio of completed projects at En-decors. We showcase our expertise in residential and commercial interior design in Bangalore." />
-  <meta name="Get Best Insights & Tips On Interior Design | En-decors"
-    content="Stay updated with the latest interior design tips, trends, and inspirations on the En-decors blogs. Discover creative ideas for your home and office spaces." />
-  <meta name="Get In Touch With Best Interior Designers in Bangalore"
-    content="Contact En-decors for all your interior design needs in Bangalore. Reach out to us for consultations, queries, and appointments. Our team awaits your call!" />
+  <title>En-decors | Leading Interior Design Company in Bangalore</title>
+  <meta name="description" content="En-decors is a premier interior design company in Bangalore specializing in residential and commercial interiors, creating beautiful and functional spaces" />
+
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Home - En-Decor" />
-  <meta property="og:description" content="" Elevate Your Spaces with En-decor: Where Dreams Take Shape." />
+  <meta property="og:description" content=" Elevate Your Spaces with En-decor: Where Dreams Take Shape." />
   <meta property="og:site_name" content="En-Decor" />
 
   <link rel="dns-prefetch" href="//use.fontawesome.com" />
