--- a/leading_interior_design_company.html
+++ b/leading_interior_design_company.html
@@ -349,11 +349,11 @@
         jqueryParams = [...jqueryParams, r];
       });
   </script>
-  <!-- This site is optimized with the Yoast SEO plugin v20.13 - https://yoast.com/wordpress/plugins/seo/ -->
-  <title>About - En-decor</title>
+
+  <title>Interior Design Experts in Bangalore |  En-decors</title>
   <meta name="description"
-    content="Internationally recognized as a leader in modern architecture, En-decor designs custom retreats that celebrate modernism and embodies the future of elevated living." />
-  <!-- <link rel="canonical" href="https://www.bmaarchitects.com/about/" /> -->
+    content="En-decors - Bangalore's top interior design company. Our team of expert designers creates stylish and functional interiors for homes and offices" />
+
   <meta property="og:locale" content="en_US" />
   <meta property="og:type" content="article" />
   <meta property="og:title" content="About - En-decor Interiors" />
