--- a/residential_and_commercial_interior_designers.html
+++ b/residential_and_commercial_interior_designers.html
@@ -344,11 +344,11 @@
       });
   </script>
   <!-- This site is optimized with the Yoast SEO plugin v20.13 - https://yoast.com/wordpress/plugins/seo/ -->
-  <title>Home En-Decor</title>
-  <meta name="description" content="" Elevate Your Spaces with En-decor: Where Dreams Take Shape." />
+  <title>Best Services In Interior Designing | Solutions by En-decors</title>
+  <meta name="description" content="Explore a wide range of interior design services in Bangalore. We offer custom solutions for homes, offices, hospitality, retails, and educational spaces." />
   <meta property="og:type" content="website" />
   <meta property="og:title" content="Home - En-Decor" />
-  <meta property="og:description" content="" Elevate Your Spaces with En-decor: Where Dreams Take Shape." />
+  <meta property="og:description" content="Elevate Your Spaces with En-decor: Where Dreams Take Shape." />
   <meta property="og:site_name" content="En-Decor" />
 
   <script type="application/ld+json" class="yoast-schema-graph">
