--- a/best_design_consultants.html
+++ b/best_design_consultants.html
@@ -329,14 +329,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
   <!-- This site is optimized with the Yoast SEO plugin v21.2 - https://yoast.com/wordpress/plugins/seo/ -->
-  <title>Projects - EN-DECOR</title>
-  <meta name="description" content="Inspired Designs; Distinct Locales" />
+  <title>Get Best Insights & Tips On Interior Design | En-decors</title>
+  <meta name="description" content="Stay updated with the latest interior design tips, trends, and inspirations on the En-decors blogs. Discover creative ideas for your home and office spaces." />
   <!-- <link rel="canonical" href="https://www.bmaarchitects.com/projects/" /> -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Projects - EN-DECOR />
+  <meta property="og:title" content="Projects - EN-DECOR" />
     <meta
-      property=" og:description" content="Inspired Designs; Distinct Locales" />
-  <meta property="og:site_name" content="EN-DECOR />
+      property=" og:description" content="Stay updated with the latest interior design tips, trends, and inspirations on the En-decors blogs. Discover creative ideas for your home and office spaces." />
+  <meta property="og:site_name" content="EN-DECOR "/>
 
     <meta property=" og:image:width" content="512" />
   <meta property="og:image:height" content="512" />
