--- a/customized_interior_design_and_furniture_projects.html
+++ b/customized_interior_design_and_furniture_projects.html
@@ -329,14 +329,14 @@
   <script src="https://cdn.tailwindcss.com"></script>
   <link href="https://unpkg.com/tailwindcss@^1.0/dist/tailwind.min.css" rel="stylesheet" />
   <!-- This site is optimized with the Yoast SEO plugin v21.2 - https://yoast.com/wordpress/plugins/seo/ -->
-  <title>Projects - EN-DECOR</title>
-  <meta name="description" content="Inspired Designs; Distinct Locales" />
+  <title>En-decors Projects | Inspiring Interior Design Portfolio </title>
+  <meta name="description" content="Check out our portfolio of completed projects at En-decors. We showcase our expertise in residential and commercial interior design in Bangalore." />
   <!-- <link rel="canonical" href="https://www.bmaarchitects.com/projects/" /> -->
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="Projects - EN-DECOR />
+  <meta property="og:title" content="Projects - EN-DECOR "/>
     <meta
       property=" og:description" content="Inspired Designs; Distinct Locales" />
-  <meta property="og:site_name" content="EN-DECOR />
+  <meta property="og:site_name" content="EN-DECOR "/>
 
     <meta property=" og:image:width" content="512" />
   <meta property="og:image:height" content="512" />
