added google manager

--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-68D9RCYQ5G"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-68D9RCYQ5G');
+</script>
+
+
   <script type="text/javascript">
     document.documentElement.className = "js";
   </script>
@@ -10519,7 +10530,11 @@
                           <div class="et_pb_divider_internal"></div>
                         </div>
                         <div class="et_pb_module et_pb_text et_pb_text_0 et_pb_text_align_left et_pb_bg_layout_light">
-                          <h1>Who We Are - Turning Concepts into Captivating Spaces</h1>
+                          <h1>
+
+Who We Are - Turning Concepts into Captivating Spaces
+
+                          </h1>
                         </div>
                         <p>
                           EN-DECOR Interiors, based in Bangalore, is a leading interior design company specializing in
