content change push

--- a/index.html
+++ b/index.html
@@ -10471,7 +10471,7 @@
                                     Your inspiration, our expertise. Welcome to a world of exceptional design.
                                   </p> -->
                                   <p class="py-5 shadow-2xl bg-[#62626263] " style="padding-bottom: 1.5rem !important;">
-                                    En-decor Interiors believes in Transforming Spaces and Elevating Lives
+                                    En-décor Interiors believes in Transforming Spaces and Elevating Lives
                                   </p>
                                   <p>&nbsp;</p>
                                   <!-- <p style="padding-right: 4px; animation: bounce 1s infinite;"
@@ -10537,15 +10537,8 @@ Who We Are - Turning Concepts into Captivating Spaces
                           </h1>
                         </div>
                         <p>
-                          EN-DECOR Interiors, based in Bangalore, is a leading interior design company specializing in
-                          both residential and commercial projects. We offer end-to-end turnkey interior solutions,
-                          managing every stage from concept to completion, ensuring a seamless experience for our
-                          clients. Known for our commitment to quality and affordable luxury, we deliver stylish,
-                          functional designs that align with each client’s vision. Our services are backed by a
-                          one-year, no-questions-asked warranty, emphasizing our dedication to long-lasting satisfaction
-                          and reliable after-sales support. Whether designing homes or dynamic commercial spaces,
-                          EN-DECOR Interiors transforms spaces with creativity, practicality, and meticulous attention
-                          to detail.
+                          EN-DECOR INTERIORS is a leading and best interior design firm with its headquarters in Bangalore, recognized as a top choice across India. We offer a comprehensive solution for all your interior design needs, whether for residential spaces in Bangalore or commercial projects. As dreamers, visualizers, planners, and decorators, we are dedicated to transforming your space using contemporary design concepts.
+                          Our expertise in interior design enables us to create meticulously detailed environments that embody your vision. By understanding your unique needs, we craft impeccable spaces that bring your dreams to life - because our clients, like you, are our top priority.
                         </p>
                         <!-- <button class="btn button border text-white bg-[#cd5225] hover:bg-white hover:text-[#cd5225] hover:border-[#cd5225] mt-2 transition-all duration-300 ease-in-out">
                           <a href="./leading_interior_design_company.html" style="text-decoration: none; color: inherit; font-weight: bold;">Learn More</a>
