--- a/leading_interior_design_company.html
+++ b/leading_interior_design_company.html
@@ -9545,7 +9545,7 @@
     }
 
     .et_pb_section_9 {
-      max-height: 746px;
+      
     }
 
     .et_pb_section_9.et_pb_section {
@@ -10351,16 +10351,8 @@
                         </div>
                         <div class="et_pb_module et_pb_text et_pb_text_1 et_pb_text_align_left et_pb_bg_layout_light">
                           <div class="et_pb_text_inner">
-                            <p class="pt-10">
-                              We focus on working closely with clients to
-                              create personalized, stress-free design
-                              experiences, helping families and businesses
-                              express themselves through their unique
-                              spaces. We are committed to creating beautiful
-                              designs that not only look great but also
-                              support your lifestyle—taking our own tastes out
-                              of the equation and focusing on defining and
-                              developing your personal style.
+                            <p class="pt-10" style="font-size: 11px;">
+                              At EN-DECOR Interiors, headquartered in Bangalore, we are proud to be one of India’s leading interior design firms, specializing in both residential and commercial interiors. With a reputation for delivering exceptional turnkey solutions, we manage every aspect of the design journey - from conceptualization to flawless execution, ensuring a seamless and stress-free experience for our clients. Known for our dedication to quality and accessible luxury, we create sophisticated, functional spaces that perfectly reflect each client’s unique vision. Our services are backed by an unconditional one-year warranty, demonstrating our commitment to excellence and outstanding after-sales support. Whether transforming homes or designing dynamic commercial spaces, EN-DECOR Interiors blends innovation, practicality, and unmatched attention to detail to redefine spaces. Whether you need residential interior designers or commercial design solutions, we help families and businesses showcase their unique styles in their spaces.
                             </p>
                           </div>
                         </div>
@@ -10393,15 +10385,7 @@
                         <div class="et_pb_module et_pb_text et_pb_text_3 et_pb_text_align_left et_pb_bg_layout_light">
                           <div class="et_pb_text_inner">
                             <p>
-                              We focus on working closely with clients to
-                              create personalized, stress-free design
-                              experiences, helping families and businesses
-                              express themselves through their unique
-                              spaces. We are committed to creating beautiful
-                              designs that not only look great but also
-                              support your lifestyle—taking our own tastes out
-                              of the equation and focusing on defining and
-                              developing your personal style.
+                              At EN-DECOR Interiors, headquartered in Bangalore, we are proud to be one of India’s leading interior design firms, specializing in both residential and commercial interiors. With a reputation for delivering exceptional turnkey solutions, we manage every aspect of the design journey - from conceptualization to flawless execution, ensuring a seamless and stress-free experience for our clients. Known for our dedication to quality and accessible luxury, we create sophisticated, functional spaces that perfectly reflect each client’s unique vision. Our services are backed by an unconditional one-year warranty, demonstrating our commitment to excellence and outstanding after-sales support. Whether transforming homes or designing dynamic commercial spaces, EN-DECOR Interiors blends innovation, practicality, and unmatched attention to detail to redefine spaces. Whether you need residential interior designers or commercial design solutions, we help families and businesses showcase their unique styles in their spaces.
                             </p>
                           </div>
                         </div>
